[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/NewsItem.gd" type="Script" id=1]
[ext_resource path="res://theme/installed.tres" type="DynamicFont" id=2]
[ext_resource path="res://icons/news_thumb.svg" type="Texture" id=3]
[ext_resource path="res://icons/author.svg" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.2, 0.247059, 0.403922, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="NewsItem" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
margin_right = 1110.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_styles/normal = SubResource( 1 )
text = "Title"
autowrap = true
uppercase = true

[node name="author" type="HBoxContainer" parent="."]
margin_top = 38.0
margin_right = 1110.0
margin_bottom = 63.0

[node name="avatar_container" type="CenterContainer" parent="author"]
margin_right = 25.0
margin_bottom = 25.0

[node name="avatar" type="TextureRect" parent="author/avatar_container"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="name" type="Label" parent="author"]
margin_left = 29.0
margin_top = 2.0
margin_right = 1110.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Author"
autowrap = true

[node name="body" type="VBoxContainer" parent="."]
margin_top = 67.0
margin_right = 1110.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3

[node name="thumb_container" type="CenterContainer" parent="body"]
margin_right = 1110.0
margin_bottom = 213.0
mouse_filter = 2

[node name="thumb" type="TextureRect" parent="body/thumb_container"]
margin_left = 365.0
margin_right = 745.0
margin_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 380, 213 )
mouse_filter = 2
size_flags_horizontal = 13
size_flags_vertical = 13
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="contents" type="Label" parent="body"]
margin_top = 217.0
margin_right = 1110.0
margin_bottom = 533.0
size_flags_horizontal = 3
size_flags_vertical = 7
autowrap = true

[node name="req" type="HTTPRequest" parent="."]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
